syntax = "proto3";
package v1;
option go_package = "github.com/cossim/coss-server/service/msg/api/v1";

message SendUserMsgRequest{
  // @inject_tag: json:"sender_id"
  string SenderId=1;
  // @inject_tag: json:"receiver_id"
  string ReceiverId=2;
  // @inject_tag: json:"content"
  string Content=3;
  // @inject_tag: json:"type"
  int32 Type=4;
  // @inject_tag: json:"replay_id"
  uint64 ReplayId=5;
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 6;

}

message SendGroupMsgRequest{
  // @inject_tag: json:"user_id" form:"user_id" uri:"user_id"
  string UserId=1;
  // @inject_tag: json:"group_id" form:"group_id" uri:"group_id"
  uint32 GroupId=2;
  // @inject_tag: json:"content" form:"content" uri:"content"
  string Content=3;
  // @inject_tag: json:"type" form:"type" uri:"type"
  uint32 Type=4;
  // @inject_tag: json:"replay_id" form:"replay_id" uri:"replay_id"
  uint32 ReplayId=5;
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 6;
}

message GetUserMsgListRequest{
  // @inject_tag: json:"user_id" form:"user_id" uri:"user_id"
  string UserId=1;
  // @inject_tag: json:"friend_id" form:"friend_id" uri:"friend_id"
  string FriendId = 2;
  // @inject_tag: json:"type" form:"type" uri:"type"
  int32 Type = 3;
  // @inject_tag: json:"content" form:"content" uri:"content"
  string Content = 4;
  // @inject_tag: json:"page_size" form:"page_size" uri:"page_size"
  int32 PageSize = 5;
  // @inject_tag: json:"page_number" form:"page_number" uri:"page_number"
  int32 PageNum = 6;
}

message UserMessage{
  // @inject_tag: json:"id"
  uint32 Id=1;
  // @inject_tag: json:"sender_id"
  string SenderId=2;
  // @inject_tag: json:"receiver_id"
  string ReceiverId=3;
  // @inject_tag: json:"content"
  string Content=4;
  // @inject_tag: json:"type"
  uint32 Type=5;
  // @inject_tag: json:"replay_id"
  uint64 ReplayId=6;
  // @inject_tag: json:"is_read"
  int32 IsRead=7;
  // @inject_tag: json:"read_at"
  int64 ReadAt=8;
  // @inject_tag: json:"receive_id"
  string ReceiveId=9;
  // @inject_tag: json:"created_at"
  int64 CreatedAt=10;
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 11;
}
message GroupMessage {
  // @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"group_id"
  uint32 Group_id = 2;
  // @inject_tag: json:"type"
  uint32 Type = 3;
  // @inject_tag: json:"reply_id"
  uint32 Reply_id = 4;
  // @inject_tag: json:"read_count"
  int32 Read_count = 5;
  // @inject_tag: json:"uid"
  string Uid = 6;
  // @inject_tag: json:"content"
  string Content = 7;
  // @inject_tag: json:"created_at"
  int64 Created_at = 8;
  // @inject_tag: json:"dialog_id"
  uint32 Dialog_id = 9;
}

message GetUserMsgListResponse{
  // @inject_tag: json:"user_messages" form:"user_messages" uri:"user_messages"
  repeated UserMessage UserMessages = 1;
  // @inject_tag: json:"total" form:"total" uri:"total"
  int32 Total = 2;
  // @inject_tag: json:"current_page" form:"current_page" uri:"current_page"
  int32 CurrentPage = 3;
}

message SendUserMsgResponse{

}

message SendGroupMsgResponse{
  // @inject_tag: json:"msg_id" form:"msg_id" uri:"msg_id"
  uint32 msgId = 1;
  // @inject_tag: json:"group_id" form:"group_id" uri:"group_id"
  uint32 groupId = 2;
}

message UserMsgRequest {
  // @inject_tag: json:"user_id"
  string user_id = 1;
  // @inject_tag: json:"friend_id"
  string friend_id = 2;
}

message GroupMsgRequest {
  // @inject_tag: json:"user_id"
  uint32 group_id = 1;
}
message UserMessages {
  // @inject_tag: json:"user_messages"
  repeated UserMessage UserMessages = 1;
}

message GroupMessages {
  // @inject_tag: json:"group_messages"
  repeated GroupMessage GroupMessages = 1;
}
message UserMsgsRequest {
  // @inject_tag: json:"user_id"
  string user_id = 1;
  // @inject_tag: json:"friend_id"
  repeated string friend_id = 2;
}

message GroupMsgsRequest {
  // @inject_tag: json:"group_id"
  repeated uint32 group_id = 1;
}
message LastMsg {
  // @inject_tag: json:"id"
  uint32 Id = 1;
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 2;
  // @inject_tag: json:"type"
  uint32 Type = 3;
  // @inject_tag: json:"content"
  string content = 4;
  // @inject_tag: json:"created_at"
  int64 CreatedAt = 5;
  // @inject_tag: json:"sender_id"
  string SenderId = 6;
}
message GetLastMsgsResponse {
  repeated LastMsg LastMsgs = 1;
}

message GetLastMsgsByDialogIdsRequest {
  // @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}

message EditUserMsgRequest {
  // @inject_tag: json:"user_message"
  UserMessage UserMessage = 1;
}

message DeleteUserMsgRequest {
  // @inject_tag: json:"msg_id"
  uint32 msgId = 1;
}

message EditGroupMsgRequest {
  // @inject_tag: json:"group_message"
  GroupMessage GroupMessage = 1;
}

message DeleteGroupMsgRequest {
  // @inject_tag: json:"msg_id"
  uint32 msgId = 1;
}

service MsgService{
  //发送私聊消息
  rpc SendUserMessage(SendUserMsgRequest) returns(SendUserMsgResponse);
  //发送群消息
  rpc SendGroupMessage(SendGroupMsgRequest) returns(SendGroupMsgResponse);
  //获取用户消息列表
  rpc GetUserMessageList(GetUserMsgListRequest) returns(GetUserMsgListResponse);
  //根据好友id获取最后一条消息
  rpc GetLastMsgsForUserWithFriends(UserMsgsRequest) returns (UserMessages);
  //根据群组id获取最后一条消息
  rpc GetLastMsgsForGroupsWithIDs(GroupMsgsRequest) returns (GroupMessages);
  //根据对话id获取最后一条消息
  rpc GetLastMsgsByDialogIds(GetLastMsgsByDialogIdsRequest) returns (GetLastMsgsResponse);
  //编辑私聊消息
  rpc EditUserMessage(EditUserMsgRequest) returns (UserMessage);
  //撤回私聊消息
  rpc DeleteUserMessage(DeleteUserMsgRequest) returns (UserMessage);
  //编辑群消息
  rpc EditGroupMessage(EditGroupMsgRequest) returns (GroupMessage);
  //撤回群消息
  rpc DeleteGroupMessage(DeleteGroupMsgRequest) returns (GroupMessage);
}